--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -21,9 +21,10 @@
   border-radius: 50px;
   background-color: var(--second);
   color: white;
-  font-weight: 900;
-  font-size: 1.5rem;
+  font-weight: 700;
+  font-size: 1.3rem;
   transition: 0.6s;
+  background-color: black;
 }
 
 #getStarted:hover {
@@ -46,4 +47,7 @@
   padding-top: 6rem;
   font-size: 3.5rem;
   font-family: Arial, sans-serif;
+  color: white;
+  font-weight: 900;
+  text-align: center;
 }
