--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,8 +1,8 @@
 header {
   width: 100vw;
-  height: 6.5vh;
+  height: 10vh;
   display: flex;
-  box-shadow: 0px 0px 5px var(--main);
+  /* box-shadow: 0px 0px 5px var(--main); */
   justify-content: space-evenly;
   align-items: center;
   background: transparent;
@@ -13,6 +13,7 @@ header {
   position: sticky;
   top: 0;
   z-index: 10;
+  background-color: #061121;
 }
 header h2 {
   color: white;
