--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,22 +1,16 @@
-.homePage {
-  /* margin-top: 7rem; */
-  min-height: 85vh;
-  width: 100vw;
-}
-
 #backgroundVideo {
-  height: 100vh;
+  height: 90vh;
   width: 100%;
   object-fit: cover;
   z-index: -10;
   position: fixed;
   user-select: none;
-  filter: brightness(25%);
+  filter: brightness(10%);
 }
 
 #getStarted {
   position: relative;
-  width: 20vw;
+  width: 24vw;
   height: 8vh;
   border-radius: 50px;
   background-color: var(--second);
@@ -25,6 +19,8 @@
   font-size: 1.3rem;
   transition: 0.6s;
   background-color: black;
+  position: relative;
+  top: 20%;
 }
 
 #getStarted:hover {
@@ -38,14 +34,13 @@
   width: 100vw;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 #naslov {
   color: var(--main);
   text-align: center;
   padding-top: 6rem;
-  font-size: 3.5rem;
+  font-size: 4rem;
   font-family: Arial, sans-serif;
   color: white;
   font-weight: 900;
