--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,6 +1,6 @@
 #backgroundVideo {
-  height: 90vh;
   width: 100%;
+  margin-top: -50px;
   object-fit: cover;
   z-index: -10;
   position: fixed;
