--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -46,3 +46,35 @@
   font-weight: 900;
   text-align: center;
 }
+
+.intro {
+  width: 100%;
+  background-color: white;
+}
+
+.intro1 {
+  width: 800px;
+  position: absolute;
+}
+
+.intro1 h1 {
+  font-weight: 700;
+  font-size: 4.5rem;
+  margin: 80px 80px 40px 80px;
+  color: rgb(45, 50, 59);
+}
+
+.intro2 {
+  width: 300px;
+  margin-left: 100px;
+  position: relative;
+  left: 700px;
+}
+
+.toggle-button {
+  margin-left: 90px;
+}
+.toggle-button :nth-child(1) {
+  width: 70px;
+  height: 50px;
+}
