--- a/src/pages/LogIn/LogIn.css
+++ b/src/pages/LogIn/LogIn.css
@@ -1,7 +1,9 @@
-body {
+.body {
+  margin-top: -40px;
+  margin-bottom: -40px;
   width: 100%;
   background-color: orange;
-  min-height: 1000px;
+  height: 140vh;
 }
 
 .row {
