--- a/src/pages/LogIn/LogIn.css
+++ b/src/pages/LogIn/LogIn.css
@@ -1,6 +1,8 @@
-body {
+.body {
   width: 100%;
   background-color: orange;
+  margin-bottom: -500px;
+  margin-top: -40px;
   min-height: 1000px;
 }
 
@@ -15,17 +17,10 @@ body {
   padding: 20px;
   margin-bottom: 100px;
   border-radius: 60px;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
 
-.btn {
-  background-color: blue;
-  color: aliceblue;
-  border: none;
-  border-radius: 3px;
-  width: 20%;
-  padding: 1rem 0.5rem;
-  font-size: 1rem;
-  font-weight: bold;
+.dugme1 {
   cursor: pointer;
   margin-left: 230px;
 }
@@ -35,7 +30,7 @@ select.input-error {
   border-color: red;
 }
 
-.btn:disabled {
+.dugme1:disabled {
   opacity: 0.35;
 }
 
