--- a/src/pages/LogIn/LogIn.css
+++ b/src/pages/LogIn/LogIn.css
@@ -1,18 +1,18 @@
 .body {
-  margin-top: -40px;
-  margin-bottom: -40px;
   width: 100%;
   background-color: orange;
   height: 110vh;
+  display: flex;
+  justify-content: space-between;
 }
 
 .row {
-  width: 60vh;
+  width: 30vw;
   background-color: rgb(235, 235, 235);
   position: absolute;
   height: 80vh;
   left: 60%;
-  bottom: 4%;
+  top: 15%;
   font-size: 15px;
 }
 .form {
@@ -28,13 +28,15 @@
   font-size: 1rem;
   font-weight: 900;
   cursor: pointer;
+  position: relative;
+  bottom: 50px;
 }
-.password {
+/* .password {
   position: relative;
   left: 5px;
-}
+} */
 
-.checkbox {
+/* .checkbox {
   position: relative;
   left: -40px;
 }
@@ -53,7 +55,7 @@ select.input-error {
 
 .btn:disabled {
   opacity: 0.35;
-}
+} */
 
 .uvod {
   width: 500px;
@@ -65,11 +67,11 @@ select.input-error {
   color: white;
 }
 
-.firstname {
-  margin-top: 50px;
-}
-
 .buySell img {
   position: absolute;
   opacity: 0.75;
+}
+.checkbox {
+  position: relative;
+  left: -40px;
 }
