--- a/src/pages/TeamPage/TeamPage.css
+++ b/src/pages/TeamPage/TeamPage.css
@@ -3,13 +3,12 @@
   width: 100vw;
   background: url(../../assets/pixelscott.jpg);
   background-size: contain;
+  display: flex;
 }
 
 .teamPagePosition {
   height: 100vh;
   width: 100vw;
   display: flex;
-  padding-top: 15vh;
-  padding-left: 0.5vw;
-  gap: 20px;
+  padding-top: 16.5vh;
 }
